plugins {
    id 'java'
}

group 'com.keyrus'
version '1.0-SNAPSHOT'

sourceCompatibility = 14
targetCompatibility = 14

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testImplementation 'junit:junit:4.12'
    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}